# sha3

./: Cargo.toml  README.md  cargo-watch
.github/workflows/: main.yml
crates/kmac/: Cargo.toml  README.md
crates/kmac/benches/: lib.rs
crates/kmac/src/: lib.rs  mac.rs
crates/tuple-hash/: Cargo.toml  README.md
crates/tuple-hash/src/: enc.rs  hash.rs  lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: bytepad.rs  enc.rs  lib.rs  util.rs
src/: enc.rs  hash.rs  lib.rs  util.rs
