[workspace]
resolver = "2"

members = ["crates/*"]

default-members = ["crates/*"]

[workspace.package]
authors = ["Eric Lagergren"]
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ericlagergren/sha3"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
expect_used = "warn"
implicit_saturating_sub = "warn"
indexing_slicing = "warn"
missing_panics_doc = "warn"
panic = "warn"
ptr_as_ptr = "warn"
string_slice = "warn"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
