[package]
name = "sha3-kmac"
version = "0.2.1"
description = """
KMAC per NIST SP 800-185
"""
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sha3-kmac"
keywords = [ "kmac", "mac", "sha3", "xof" ]
categories = [ "cryptography", "no-std", "no-std::no-alloc" ]

[lints]
workspace = true

[features]
default = []

# Enable `alloc` support.
#
# Currently unused.
alloc = [
	"sha3-utils/alloc",
]

# Enable `std` support.
std = [
	"sha3/std",
	"sha3-utils/std",
]

[dependencies]
generic-array = { version = "1", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha3-utils = { version = "0.2.0", path = "../utils", default-features = false }

[dev-dependencies]
sha3-kmac = { path = ".", features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
always_include_features = []

denylist = []
