[package]
name = "sha3-utils"
version = "0.4.0"
description = """
SHA-3 utilities
"""
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/sha3-utls"
keywords = [ "sha3", "left_encode", "right_encode" ]
categories = [ "cryptography", "no-std", "no-std::no-alloc" ]

[lints]
workspace = true

[features]
default = []

# Enable `alloc` support.
#
# Currently unused.
alloc = []

no-panic = ["dep:no-panic"]

# Enable `std` support.
#
# Currently unused.
std = []

[dependencies]
no-panic = { workspace = true, default-features = false, optional = true }
hybrid-array = { version = "0.2", default-features = false }
typenum = { workspace = true, default-features = false, features = ["const-generics"] }

[dev-dependencies]
sha3-utils = { path = ".", features = ["std"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
always_include_features = []

# TODO(eric): Needs --release
denylist = ["no-panic"]
