[package]
name = "sha3-utils"
version = "0.5.0"
description = """
SHA-3 utilities
"""
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/sha3-utls"
keywords = [ "sha3", "left_encode", "right_encode" ]
categories = [ "cryptography", "no-std", "no-std::no-alloc" ]

[lints]
workspace = true

[features]
default = []

# Enable `alloc` support.
#
# Currently unused.
alloc = [
	"zerocopy/alloc",
]

# Enable `bytepad` support.
bytepad = [
	"dep:typenum",
]

no-panic = ["dep:no-panic"]

# Enable `std` support.
#
# Currently unused.
std = [
	"zerocopy/std",
]

[dependencies]
no-panic = { workspace = true, default-features = false, optional = true }
typenum = { workspace = true, default-features = false, features = ["const-generics"], optional = true }
zerocopy = { workspace = true, default-features = false, features = ["derive"] }

[dev-dependencies]
sha3-utils = { path = ".", features = ["std"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
always_include_features = [
	"hybrid-array",
]

# TODO(eric): Needs --release
denylist = ["no-panic"]
